[package]
name = "merkle"
version = "0.1.0"
edition = "2021"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
]

[lib]
crate-type = ["cdylib"]

[features]
alloc = []
client = []
debug = []

[dependencies]
quasar-lang = { version = "0.0.0" }
quasar-spl = { version = "0.0.0" }
sha2-const-stable = "0.1.0"

[target.'cfg(any(target_os = "solana", target_arch = "bpf"))'.dependencies]
solana-define-syscall = { version = "5.0.0", features = ["unstable-static-syscalls"] }

[target.'cfg(not(any(target_os = "solana", target_arch = "bpf")))'.dependencies]
sha2 = { version = "0.10", default-features = false }

[dev-dependencies]
quasar-svm = { version = "0.1" }
solana-account = { version = "3.4.0" }
solana-address = { version = "2.2.0", features = ["decode"] }
solana-instruction = { version = "3.2.0", features = ["bincode"] }
solana-pubkey = { version = "4.1.0" }
